Missing readme, pdf report, contributions.txt